<?xml version="1.0"?>
<package>
  <name>urdf2or</name>
  <version>0.4.0</version>
  <description>
    OpenRAVE plugin for loading URDF and SRDF files.
  </description>
  <url type="repository">https://github.com/personalrobotics/or_urdf</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="psigen@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>tinyxml2</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>urdf</run_depend>
</package>
